--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "apexcharts": "^3.35.4",
+    "chart.js": "^3.8.2",
+    "framer-motion": "^6.5.1",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-animated-cursor": "^2.5.1",
+    "react-apexcharts": "^1.4.0",
+    "react-chartjs-2": "^4.3.1",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "recharts": "^2.1.13",
+    "sass": "^1.54.0",
+    "swiper": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.20.0",
